# Neuronal-Network-Project

./: README.md
sw/c/demo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
sw/c/demo/blank/: Makefile  blank  cmake_install.cmake
sw/c/demo/common/: Makefile  cmake_install.cmake
sw/c/demo/demo/: Makefile  cmake_install.cmake
sw/c/demo/demo/basic-passwdcheck/: Makefile  basic-passwdcheck  cmake_install.cmake
sw/c/demo/demo/hello_world/: Makefile  cmake_install.cmake  demo
sw/c/demo/demo/latency_test/: Makefile  cmake_install.cmake
sw/c/demo/demo/lcd_st7735/: Makefile  cmake_install.cmake  lcd_st7735
sw/c/demo/demo/simpleserial-aes/: Makefile  cmake_install.cmake  simpleserial-aes
sw/c/demo/latency_test/: CMakeLists.txt  README.md  benchmark.py  benchmark_v2.py  datas.py  main.c  plot_final.py  plot_violin.py  results_qat-mnist-odd_hybrid.csv  results_qat-mnist-odd_reference.csv  results_qat-occupancy2_hybrid.csv  results_qat-occupancy2_reference.csv  results_qat-occupancy_hybrid.csv  results_qat-occupancy_reference.csv
sw/c/demo/latency_test/qat-mnist-odd/: hybrid-simple.c  network.h  ref-from-hybrid-simple.c
sw/c/demo/latency_test/qat-occupancy/: dataset.json  hybrid-simple.c  network.h  ref-from-hybrid-simple.c
sw/c/demo/latency_test/qat-occupancy2/: CMakeCache.txt  Makefile  cmake_install.cmake  dataset.json  hybrid-simple.c  network.h  ref-from-hybrid-simple.c
